<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parchment">

    <TextView
        android:id="@+id/answerQuestions_textView"
        android:layout_width="367dp"
        android:layout_height="84dp"
        android:layout_marginTop="188dp"
        android:fontFamily="sans-serif"
        android:text="@string/answer_questions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/playerInfo_tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/playerInfo_tableLayout"
        android:layout_width="357dp"
        android:layout_height="91dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="197dp"
        app:layout_constraintBottom_toTopOf="@+id/finish_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerQuestions_textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/playerName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/playerName_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/characterLevel_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_character_level"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/characterLevel_editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:ems="10"
                android:hint="@string/int_character_level"
                android:inputType="number"
                android:textAlignment="textStart" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerInfo_tableLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>